public/css/basic.css
* {
    margin: 0;
    padding: 0;
    outline: 0;
    box-sizing: border-box;
}

::-webkit-scrollbar {
    width: 5px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: radial-gradient(circle at 83% 60%, #67054d, #1d003d);
    box-shadow: inset 0 0 5px #1d003d; 
    border-radius: 10px;
  }
   
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: radial-gradient(circle at 83% 60%, #67054d, #1d003d); 
    border-radius: 10px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: radial-gradient(circle at 83% 60%, #50043c, #15002b); 
  }

/* Fundo com degradê */
body {
    background-image: radial-gradient(circle at 83% 60%, #67054d, #1d003d);
    background-repeat: no-repeat;
    background-size: 100% auto;
    background-position: center top;
    background-attachment: fixed;
}

/* Container principau */
.container {
    font-family: 'Fira Sans','Noto Sans', sans-serif;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
    padding: 20px;
    padding-bottom: 50px;
}

/* Botão */
.collapse-button {
    background: #ff097c;
    width: 100%;
    position: fixed;
    bottom: 0;
    border: none;
    padding: 10px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 10px auto 0; /* Alinha o botão centralizado */
    border-top: 1px solid #ffd103;
    color: #1d003d;
}

.collapse-button:hover .faleCom {
  color: #ffd103;
}
.collapse-button:hover .button-icon {
  filter: saturate(90) hue-rotate(120deg) brightness(270%);
}

.chatContainer {
  position: relative;
  width: 60%;
  min-width: 470px;
}

/* Imagem do botão */
.button-icon {
    width: 20px;
    height: auto;
    margin-left: 8px;
    filter: saturate(40) hue-rotate(296deg) brightness(0.2);
}



.iframe-panel {
  position: absolute;
  width: 100%;
  margin: auto;
  height: auto;
  overflow: hidden;
  bottom: 0;
}

@keyframes showIframe {
  0% {
    height: 0;
  }
  100% {
    height: 580px;
  }
}
@keyframes hideIframe {
  0% {
    height: 580px;
  }
  100% {
    height: 0;
  }
}

.iframe-container-hidden {
  display: none;
}

.iframe-container-show, .iframe-container-hide {
    position: relative; /* Para permitir o posicionamento relativo ao container */
    left: 0; /* Garante alinhamento horizontal com a .container */
    width: 100%; /* Igual à largura da .container */
    max-width: 660px;
    height: 580px; /* Ajusta dinamicamente ao conteúdo */
    z-index: 2; /* Sobre o conteúdo da .container */
    margin: auto;
}

.iframe-container-show {
  animation-name: showIframe;
  animation-duration: 1.5s;
}
.iframe-container-hide {
  animation-name: hideIframe;
  animation-duration: 1.5s;
}

.closeIframeBtn {
  position: relative;
  z-index: 3;
  top: -7px;
  padding: 0 10px;
  width: 0;
	height: 0;
	border-left: 10px solid transparent;
	border-right: 10px solid transparent;
	border-top: 5px solid #55555533;
  border-bottom: none;
  cursor: pointer;
}

/* Estilo da imagem */
.logo {
    width: 60%; /* Valor fixo padrão */
    height: auto;
    margin-bottom: 0px;
    max-width: 470px;
}

/* Linha decorativa */
.line {
    color: #ff097c;
    font-weight: bold;
    font-size: 1em;
    margin: 10px 0;
}

/* Descrição */
.description {
    color: #ff097c;
    font-size: 1.4em;
    margin: 15px 0;
}

/* E-mail */
.faleCom {
    font-family: 'Fira Sans','Noto Sans', sans-serif;
    font-weight: 900;
    font-size: 1.1em;
    text-align: center;
}

/* dropdown para selecionar o idioma */
#languageSelector {
  position: fixed;
  top: 0px;
  left: 80%;

  background: transparent;
  border: 1px solid #bc66bc;
  color: #bc66bc;
  font-family: 'Noto Sans', sans-serif;
  font-size: 1em;
  padding: 2px 9px;
  border-radius: 4px;
  outline: none;
  margin-bottom: 18px;
  margin-top: 10px;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  cursor: pointer;
}

#languageSelector option {
  background: transparent;
  font-family: 'Noto Sans', sans-serif;
}

.numbahs {
  color: #ffab29f0;
  font-size: 1.4em;
}

.numbahs .line {
  color: #ffab29f0;
  font-size: 0.71em;
}

.numbah_geral_txt {
  max-width: 800px;
  margin: 15px auto;
}

.numbah_display_container {
    display: flex;
    flex-direction: column;
    margin: 20px auto;
    align-items: center;
}

.numbah_display_item {
    margin: 0 0 20px;
    width: 211px;
}

.numbah_motion,.numbah_email,.numbah_lp {
  font-family: 'Fira Sans Condensed';
  font-size: 5em;
}

@media screen and (max-width: 500px) {
  .description,.numbahs {
    font-size: 1.1em;
  }
  
  .chatContainer {
    width: 100%;
    min-width: unset;
  }
}

@media screen and (max-width: 390px) {
  .description,.numbahs {
    font-size: 0.85em;
  }
}

@media screen and (min-width: 490px) {
    
  .iframe-container {
    height: 370px;
  }
}

@media screen and (min-width: 650px) {
  
  .iframe-container {
    height: 394px;
  }

  .numbah_display_container {
    flex-direction: row;
    justify-content: space-around;
    max-width: 1000px !important;
    width: 100vw;
  }

  .numbah_display_item {
    margin: 0;
  }
}

@media screen and (min-width: 2020px) {
  .container {
    padding: 200px 20px 20px;
  }
  #languageSelector {
    top: 169px;
    left: 58%;
  }
  .iframe-container {
    height: 394px;
  }

  .numbah_display_item {
    width: 500px;
  } 

  .numbah_motion,.numbah_email,.numbah_lp {
    font-size: 7em;
  }

}

